Fixed overflow scroll issue for TA containers

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -126,7 +126,7 @@ h1,h2 {
   p {
     font-weight: bold;
     white-space: nowrap;
-    overflow: scroll;
+    overflow: auto;
     //font-size: 1rem;
   }
 }
